[package]
name = "screeps-game-utils"
version = "0.0.0"
authors = ["Shane Madden"]
documentation = "https://docs.rs/screeps-game-utils/"
edition = "2021"
include = [
    "Cargo.toml",
    "src/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-utils/"
description = "Additional utility functionality for Screeps: World not included in screeps-game-api"

[lib]
name = "screeps_utils"

[package.metadata.docs.rs]
all-features = true

[dependencies]
screeps-game-api = { path = "../screeps-game-api" }
# screeps-game-api = "0.15"

# arrayvec = "0.7"
# enum_dispatch = "0.3"
# enum-iterator = "1.4"
# js-sys = "0.3"
# num-derive = "0.4"
# num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_repr = "0.1"
# wasm-bindgen = "0.2"
# serde-wasm-bindgen = "0.5"

# [dev-dependencies]
# assert_approx_eq = "1.1"
# bincode = "1.3"
# wasm-bindgen-test = "0.3"

[features]
default = []
