[package]
name = "screeps-game-utils"
version = "0.18.0"
authors = ["Shane Madden"]
documentation = "https://docs.rs/screeps-game-utils/"
edition = "2021"
include = [
    "Cargo.toml",
    "src/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-utils/"
description = "Additional utility functionality for Screeps: World not included in screeps-game-api"

[lib]
name = "screeps_utils"

[package.metadata.docs.rs]
all-features = true

[dependencies]
screeps-game-api = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = []
