[package]
name = "screeps-game-utils"
version = "0.23.0"
authors = ["Shane Madden"]
documentation = "https://docs.rs/screeps-game-utils/"
edition = "2021"
include = [
    "Cargo.toml",
    "src/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-game-utils/"
description = "Additional utility functionality for Screeps: World not included in screeps-game-api"

[lib]
name = "screeps_utils"

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = ">=0.4.20"
screeps-game-api = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8.1"

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = []

[profile.release]
lto = true